--- a/Landing_page.html
+++ b/Landing_page.html
@@ -34,8 +34,9 @@
         function startQuiz() {
             alert('redy?');
             // Redirect ke halaman quiz
-            window.location.href = 'quiz.html';
+            window.location.href = 'quiz/quiz.html';
         }
     </script>
 </body>
+
 </html>
