Update HTML structure and file paths

--- a/Landing_page.html
+++ b/Landing_page.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz Matematika</title>
-    <link rel="stylesheet" href="css/lpage1.css">
-    <script src="js/lpage1.js" defer></script>
+    <link rel="stylesheet" href="/Kelompok_6/css/quiz.css">
+<script src="/Kelompok_6/js/quiz.js"></script>
 </head>
 <body>
     <div class="container">
@@ -40,3 +40,4 @@
 </body>
 
 </html>
+
