--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
         function startQuiz() {
             alert('redy?');
             // Redirect ke halaman quiz
-            window.location.href = 'quiz/quiz.html';
+            window.location.href = '/quiz/quiz.html';
         }
     </script>
 </body>
 
 </html>
+
 
