--- a/quiz/quiz.html
+++ b/quiz/quiz.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz Matematika</title>
-    <link rel="stylesheet" href="/css/quiz.css">
+    <link rel="stylesheet" href="./css/quiz.css">
 </head>
 <body>
     <div class="quiz-container">
