--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz Matematika</title>
-    <link rel="stylesheet" href="./Kelompok_6/css/quiz.css">
-<script src="./Kelompok_6/js/quiz.js"></script>
+    <link rel="stylesheet" href="css/quiz.css">
+<script src="js/quiz.js"></script>
 </head>
 <body>
     <div class="container">
