--- a/quiz/quiz.html
+++ b/quiz/quiz.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz Matematika</title>
-    <link rel="stylesheet" href="/Kelompok_6/css/quiz.css">
+    <link rel="stylesheet" href="./Kelompok_6/css/quiz.css">
 </head>
 <body>
     <div class="quiz-container">
@@ -47,6 +47,6 @@
         </div>
     </div>
 
-    <script src="/Kelompok_6js/quiz.js"></script>
+    <script src="./Kelompok_6js/quiz.js"></script>
 </body>
 </html>
