--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz Matematika</title>
     <link rel="stylesheet" href="./Kelompok_6/css/lpage1.css">
+    <script src="./Kelompok_6/js/quiz.js"></script>
 </head>
 <body>
     <div class="container">
